--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Rock Paper Scissors</title>
     <link rel="icon" href="./rps.png">
-    <link rel="stylesheet" href="/rock.css">
+    <link rel="stylesheet" href="./rock.css">
 </head>
 <body>
     <div class="a"><h3>Rock Paper Scissors</h3></div>
