--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <p class="pe">Pick your move</p>
     </div>
 
-    <script src="/rock.js"></script>
+    <script src="./rock.js"></script>
 </body>
 </html>
